--- a/touchbase-react/package.json
+++ b/touchbase-react/package.json
@@ -10,9 +10,11 @@
     "react": "^17.0.1",
     "react-big-calendar": "^0.33.2",
     "react-calendar": "^3.4.0",
+    "react-date-picker": "^8.1.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-time-picker": "^4.2.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.0"
