--- a/touchbase-react/package.json
+++ b/touchbase-react/package.json
@@ -6,12 +6,16 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "date-fns": "^2.21.3",
     "moment": "^2.29.1",
     "react": "^17.0.1",
-    "react-big-calendar": "^0.33.2",
+    "react-alert": "^7.0.3",
+    "react-big-calendar": "^0.33.3",
     "react-calendar": "^3.4.0",
     "react-date-picker": "^8.1.1",
     "react-dom": "^17.0.1",
+    "react-event-calendar": "^0.3.0",
+    "react-native": "^0.64.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-time-picker": "^4.2.1",
