--- a/touchbase-react/package.json
+++ b/touchbase-react/package.json
@@ -12,6 +12,7 @@
     "react-alert": "^7.0.3",
     "react-big-calendar": "^0.33.3",
     "react-calendar": "^3.4.0",
+    "react-chips": "^0.8.0",
     "react-date-picker": "^8.1.1",
     "react-dom": "^17.0.1",
     "react-event-calendar": "^0.3.0",
