--- a/touchbase-react/package.json
+++ b/touchbase-react/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.15.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
@@ -19,9 +21,11 @@
     "react-native": "^0.64.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-stripe-elements": "^6.1.2",
     "react-time-picker": "^4.2.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "stripe": "^8.156.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
